--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 
   <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
-  <script src="static/js/application.js"></script>
+  <script src="/static/js/application.js"></script>
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
@@ -33,7 +33,7 @@
           <div id="message_container" style = "height: 80vh; background: #fff; border-radius: 50px; position: relative; border: 1px solid rgba(0, 0, 0, 0.12);">
             <h2 id = 'output' class = 'heading' style = "text-align: center; margin-top: 2vh"> Chat </h2>
             <div id="message_holder" style="overflow-y:scroll; height: 60vh;">
-              <div style = "position: absolut; margin: 0 auto; left: 0; bottom; height: 1px; width: 50%; border-bottom: 1px solid rgba(0, 0, 0, 0.12); margin-bottom: 4vh;"> </div>
+              <div style = "position: absolut; margin: 0 auto; left: 0; height: 1px; width: 50%; border-bottom: 1px solid rgba(0, 0, 0, 0.12); margin-bottom: 4vh;"> </div>
               <img src="static/images/transparent.svg" align="bottom" style="float:right; height: 2vh; ">
               <p style = "color: DARKGREEN; text-align:RIGHT; overflow-wrap: break-word; word-wrap: break-word; padding-left:30%; padding-right: 3%;"> <b>Sia: </b> Hi, I'm Sia! I'm an AI Counselor. So, while I'm not a human, I speak and act like how you would expect a Therapist to.</p>
               <img src="static/images/transparent.svg" align="bottom" style="float:right; height: 2vh;">
@@ -51,9 +51,13 @@
         <div class = "container mt-5">
           <div id="recommendation_holder" style="overflow-y:scroll; height: 60vh; background: #fff; border-radius: 50px; position: relative;">
             <h2 id = 'output-recommendation' class = 'heading' style = "text-align: center; margin-top: 2vh"> Recommendations </h2>
-            <div style = "position: absolut; margin: 0 auto; left: 0; bottom; height: 1px; width: 50%; border-bottom: 1px solid rgba(0, 0, 0, 0.12); margin-bottom: 4vh;"> </div>
+            <div style = "position: absolut; margin: 0 auto; left: 0; height: 1px; width: 50%; border-bottom: 1px solid rgba(0, 0, 0, 0.12); margin-bottom: 4vh;"> </div>
           </div>
         </div>
+
+        <form action="static/html/chat.html">
+          <input id ='call_recommendations' class="btn btn-primary" value="Go to Chat" type="submit"/>
+        </form>
 
 
     <button id='call_recommendations' type="button" class="btn btn-primary">Test Button</button>
@@ -110,7 +114,7 @@
      socket.on('to_socket_string', function(msg) {
   ////Add response image to your message on the right
   var proPic = document.createElement("img");
-  proPic.src = "static/images/transparent.svg";
+  proPic.src = "/static/images/transparent.svg";
   proPic.style = "float:right; height: 2vh;";
   document.getElementById('message_holder').appendChild(proPic);
 
