--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 
   <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
-  <script src="/static/js/application.js"></script>
+  <script src="static/js/application.js"></script>
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
@@ -55,7 +55,7 @@
           </div>
         </div>
 
-        <form action="static/html/chat.html">
+        <form action="/chat">
           <input id ='call_recommendations' class="btn btn-primary" value="Go to Chat" type="submit"/>
         </form>
 
@@ -114,7 +114,7 @@
      socket.on('to_socket_string', function(msg) {
   ////Add response image to your message on the right
   var proPic = document.createElement("img");
-  proPic.src = "/static/images/transparent.svg";
+  proPic.src = "static/images/transparent.svg";
   proPic.style = "float:right; height: 2vh;";
   document.getElementById('message_holder').appendChild(proPic);
 
