--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -2,6 +2,18 @@
 <html>
 <head>
 
+  <style>
+      
+      .carousel-control-next-icon:after
+      {
+        content: '>';
+        color: red;
+      }
+      
+      .carousel-control-prev-icon:after {
+        content: '<';
+        color: red;
+      }</style>
 
   <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
@@ -32,10 +44,49 @@
         <div id="recommendation_holder" style="overflow-y:scroll; height: 60vh; background: #fff; border-radius: 50px; position: relative;">
           <h2 id = 'output-recommendation' class = 'heading' style = "text-align: center; margin-top: 2vh"> Recommendations </h2>
           <div style = "position: absolut; margin: 0 auto; left: 0; height: 1px; width: 50%; border-bottom: 1px solid rgba(0, 0, 0, 0.12); margin-bottom: 4vh;"> </div>
+          <div class="container">
+              <div id="carouselContent" class="carousel slide" data-interval="false">
+                  <div class="carousel-inner" role="listbox">
+                      <div class="carousel-item active text-center p-4" id='recommendation1'>
+                           <p id="loadingText">...loading...</p>
+                      </div>
+                      <div class="carousel-item text-center p-4" id='recommendation2'>
+                      </div>
+                      <div class="carousel-item text-center p-4" id='recommendation3'>
+                      </div>
+                  </div>
+                  <a class="carousel-control-prev" href="#carouselContent" role="button" data-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                  </a>
+                  <a class="carousel-control-next" href="#carouselContent" role="button" data-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                  </a>
+              </div>
+          </div>
         </div>
       </div>
 
-      <script>
+      <form action="/chat">
+        <input id ='call_recommendations' class="btn btn-primary" value="Back to Chat" type="submit"/>
+      </form>
+
+      
+
+
+      
+
+      <script type="text/javascript">
+        var socket = io.connect('http://' + document.domain + ':' + location.port + '/test');
+
+        window.onload = function() {
+          console.log('Page Load Function Called');
+
+          socket.emit('recommendation_python', namespace='/test');
+        };
+
+
       socket.on('recommendation_socket', function(msg) {
         ////Add response image to your message on the right
         recommendations_array = msg.recommendations_array
@@ -43,10 +94,12 @@
         for (let l = 0; l < recommendations_array.length; l++) {
         // Runs 5 times, with values of step 0 through 4.
         var recommendation_body = document.createElement("p");
-        recommendation_body.style="color: DARKGREEN; text-align:RIGHT; overflow-wrap: break-word; word-wrap: break-word; padding-left:30%; padding-right: 3%;";
         recommendation_body.innerHTML = recommendations_array[l]
       
-        document.getElementById('recommendation_holder').appendChild(recommendation_body)
+        var myobj = document.getElementById("loadingText");
+        myobj.remove();
+
+        document.getElementById('recommendation' + (l+1)).appendChild(recommendation_body)
       
       }
     })
