--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -36,7 +36,7 @@
         z-index: 999;
         display: flex;
         justify-content: space-between;">
-        <img src="/static/images/transparent.svg" class="header-brand-img mr-2" alt="Responsly Logo", style="padding: 15px 0;">
+        <img src="/static/images/transparent.svg" class="header-brand-img mr-2" alt="Responsly Logo" style="padding: 15px 0;">
       </header>
     </div>
 
