--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
         <div class="row">
             <div class="col-12 col-lg-12">
                 <h1 style = "font-size: 60px">Talk with an AI Therapist</h1>
-                <p><br> <br>While not a Therapist, the AI responsds like one. 
+                <p><br> <br>While not a Therapist, the AI responds like one. 
                   <br> Our therapist won't ask to schedule appointments or charge you $100 an hour. <br> <br>
                   Uses GPT3 to power the chat, and love to power the recommendations
                   <br> <br><br><br></p> 
