Creating header link

--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -20,20 +20,22 @@
 
 <div class = "page" style = "background: #fff">
     <div class = "page-main">
-      <div class = "header py-4", style="height: 64px;">
-        <header style = "background: #fff;
-        width: 100%;
-        height: 64px;
-        border-bottom: 1px solid rgba(0, 0, 0, 0.12);
-        padding: 0 24px;
-        position: fixed;
-        top: 0;
-        z-index: 999;
-        display: flex;
-        justify-content: space-between;">
-        <img src="/static/images/transparent.svg" class="header-brand-img mr-2" alt="Responsly Logo" style="padding: 15px 0;">
-      </header>
-    </div>
+        <div class = "header py-4", style="height: 64px;">
+            <header style = "background: #fff;
+            width: 100%;
+            height: 64px;
+            border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+            padding: 0 24px;
+            position: fixed;
+            top: 0;
+            z-index: 999;
+            display: flex;
+            justify-content: space-between;">
+            <a href='/' style="text-align: left;">
+              <img src="/static/images/transparent.svg" class="header-brand-img mr-2" alt="Responsly Logo", style="padding: 15px; height:100%;">
+            </a>
+          </header>
+        </div>
 
     <div class = "container mt-5">
         <div id="recommendation_holder" style="overflow-y:scroll; height: 60vh; background: #fff; border-radius: 50px; position: relative;">
