--- a/templates/chat.html
+++ b/templates/chat.html
@@ -105,6 +105,7 @@ section {
 </head>
 <body>
 
+
 <div class = "page" style = "background: #fafafa">
     <div class = "page-main">
       <div class = "header py-4", style="height: 64px;">
@@ -118,7 +119,9 @@ section {
         z-index: 999;
         display: flex;
         justify-content: space-between;">
-        <img src="/static/images/transparent.svg" class="header-brand-img mr-2" alt="Responsly Logo", style="padding: 15px 0;">
+        <a href='/' style="text-align: left;">
+          <img src="/static/images/transparent.svg" class="header-brand-img mr-2" alt="Responsly Logo", style="padding: 15px; height:100%;">
+        </a>
       </header>
     </div>
 
@@ -156,6 +159,8 @@ section {
              width: 40vh;"/>
         </form>
       </div> 
+      </div>
+      </div>
 
         <script type="text/javascript">
             var socket = io.connect('http://' + document.domain + ':' + location.port + '/test');
