--- a/templates/index.html
+++ b/templates/index.html
@@ -14,20 +14,21 @@
 
   <div class = "page" style = "background-image:url(static/images/Background.png); background-size: 100%; background-repeat: no-repeat">
     <div class = "page-main">
-      <div class = "header py-4", style="height: 64px;">
-        <header style = "
-        width: 100%;
-        height: 64px;
-        border-bottom: 1px solid rgba(0, 0, 0, 0.12);
-        padding: 0 24px;
-        position: fixed;
-        top: 0;
-        z-index: 999;
-        display: flex;
-        justify-content: space-between;">
-        <img src="static/images/transparent.svg" class="header-brand-img mr-2" alt="Responsly Logo", style="padding: 15px 0;">
-      </header>
-    </div>
+        <div class = "header py-4", style="height: 64px;">
+            <header style = "width: 100%;
+            height: 64px;
+            border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+            padding: 0 24px;
+            position: fixed;
+            top: 0;
+            z-index: 999;
+            display: flex;
+            justify-content: space-between;">
+            <a href='/' style="text-align: left;">
+              <img src="/static/images/transparent.svg" class="header-brand-img mr-2" alt="Responsly Logo", style="padding: 15px; height:100%;">
+            </a>
+          </header>
+        </div>
   <div style = 'height: 100vh;'>
     <div class="container hero" style="padding: 20vh;">
         <div class="row">
