--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -2,22 +2,15 @@
 <html>
 <head>
 
-  <style>
-      
-      .carousel-control-next,
-    .carousel-control-prev /*, .carousel-indicators */ {
-    filter: invert(100%);
-}
-    </style>
-
   <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
   <script src="/static/js/application.js"></script>
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="/static/css/styles.css">
+
 </head>
 <body>
-
 <div class = "page" style = "background: #fff">
     <div class = "page-main">
         <div class = "header py-4", style="height: 64px;">
@@ -30,12 +23,17 @@
             top: 0;
             z-index: 999;
             display: flex;
-            justify-content: space-between;">
+            justify-content: space-between;"
+            
+            class="head">
             <a href='/' style="text-align: left;">
               <img src="/static/images/transparent.svg" class="header-brand-img mr-2" alt="Responsly Logo", style="padding: 15px; height:100%;">
             </a>
           </header>
         </div>
+
+        <p id = "test"> Testing text</p>
+
 
     <div class = "container mt-5">
         <div id="recommendation_holder" style="overflow-y:scroll; height: 60vh; background: #fff; border-radius: 50px; position: relative;">
@@ -85,7 +83,7 @@
         window.onload = function() {
           console.log('Page Load Function Called');
 
-          socket.emit('recommendation_python', namespace='/test');
+          //socket.emit('recommendation_python', namespace='/test');
         };
 
 
