--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
   <script src="static/js/application.js"></script>
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel = "stylesheet" type = "text/css" href = "/static/css/styles.css"/>
 </head>
 <body>
 
@@ -15,15 +16,7 @@
   <div class = "page" style = "background-image:url(static/images/Background.png); background-size: 100%; background-repeat: no-repeat">
     <div class = "page-main">
         <div class = "header py-4", style="height: 64px;">
-            <header style = "width: 100%;
-            height: 64px;
-            border-bottom: 1px solid rgba(0, 0, 0, 0.12);
-            padding: 0 24px;
-            position: fixed;
-            top: 0;
-            z-index: 999;
-            display: flex;
-            justify-content: space-between;">
+          <header class="header">
             <a href='/' style="text-align: left;">
               <img src="/static/images/transparent.svg" class="header-brand-img mr-2" alt="Responsly Logo", style="padding: 15px; height:100%;">
             </a>
@@ -39,7 +32,7 @@
                   Uses GPT3 to power the chat, and love to power the recommendations
                   <br> <br><br><br></p> 
                   <form action="/chat">
-                    <input id ='call_recommendations' class="btn btn-primary" value="Start a Chat" type="submit" style = "height: 10vh; width: 40vh; background: #4A3094; border-color: #4A3094; box-shadow: 2px 2px #888888;"/>
+                    <input id ='call_recommendations' class="btn btn-primary" value="Start a Chat" type="submit"/>
                   </form>
             </div>
         </div>
