--- a/templates/index.html
+++ b/templates/index.html
@@ -1,121 +1,110 @@
-<!DOCTYPE html>
-<html>
-<head>
+{% extends "layout.html" %}
+{% block content %}
 
 
-  <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
-  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
-  <script src="static/js/application.js"></script>
-
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel = "stylesheet" type = "text/css" href = "/static/css/styles.css"/>
-</head>
-<body>
-
-
-  <div class = "page" style = "background-image:url(static/images/Background.png); background-size: 100%; background-repeat: no-repeat">
-    <div class = "page-main">
-        <div class = "header py-4", style="height: 64px;">
-          <header class="header">
-            <a href='/' style="text-align: left;">
-              <img src="/static/images/transparent.svg" class="header-brand-img mr-2" alt="Responsly Logo", style="padding: 15px; height:100%;">
-            </a>
-          </header>
-        </div>
-  <div style = 'height: 100vh;'>
-    <div class="container hero" style="padding: 20vh;">
-        <div class="row">
-            <div class="col-12 col-lg-12">
-                <h1 style = "font-size: 60px">Talk with an AI Therapist</h1>
-                <p><br> <br>While not a Therapist, the AI responds like one. 
-                  <br> Our therapist won't ask to schedule appointments or charge you $100 an hour. <br> <br>
-                  Uses GPT3 to power the chat, and love to power the recommendations
-                  <br> <br><br><br></p> 
-                  <form action="/chat">
-                    <input id ='call_recommendations' class="btn btn-primary" value="Start a Chat" type="submit"/>
-                  </form>
-            </div>
-        </div>
-    </div>
+<div class = "page" style = "background-image:url(static/images/Background.png); background-size: 100%; background-repeat: no-repeat">
+  <div class = "page-main">
+      <div class = "header py-4", style="height: 64px;">
+        <header class="header">
+          <a href='/' style="text-align: left;">
+            <img src="/static/images/transparent.svg" class="header-brand-img mr-2" alt="Responsly Logo", style="padding: 15px; height:100%;">
+          </a>
+        </header>
+      </div>
+<div style = 'height: 100vh;'>
+  <div class="container hero" style="padding: 20vh;">
+      <div class="row">
+          <div class="col-12 col-lg-12">
+              <h1 style = "font-size: 60px">Talk with an AI Therapist</h1>
+              <p><br> <br>While not a Therapist, the AI responds like one. 
+                <br> Our therapist won't ask to schedule appointments or charge you $100 an hour. <br> <br>
+                Uses GPT3 to power the chat, and love to power the recommendations
+                <br> <br><br><br></p> 
+                <form action="/chat">
+                  <input id ='call_recommendations' class="btn btn-primary" value="Start a Chat" type="submit"/>
+                </form>
+          </div>
+      </div>
   </div>
+</div>
 
 
 
-    <script type="text/javascript">
-     var socket = io.connect('http://' + document.domain + ':' + location.port + '/test');
+  <script type="text/javascript">
+   var socket = io.connect('http://' + document.domain + ':' + location.port + '/test');
 
-     $('#sendbutton').on('click', function(){
-      console.log('Button Clicked');
-      console.log($('#myMessage').val());
+   $('#sendbutton').on('click', function(){
+    console.log('Button Clicked');
+    console.log($('#myMessage').val());
 
-                //Add profile image to your message on the left
-                var proPic = document.createElement("img");
-                proPic.src = "static/images/transparent.svg";
-                proPic.style = "float:left; height: 2vh;";
-                document.getElementById('message_holder').appendChild(proPic);
+              //Add profile image to your message on the left
+              var proPic = document.createElement("img");
+              proPic.src = "static/images/transparent.svg";
+              proPic.style = "float:left; height: 2vh;";
+              document.getElementById('message_holder').appendChild(proPic);
 
-                //Add a <p> for your message on the left
-                var msgBody = document.createElement("p");
-                msgBody.style="color: DARKBLUE; text-align:LEFT; overflow-wrap: break-word; word-wrap: break-word; padding-right:30%; padding-left: 3%;";
-                msgBody.innerHTML= "<b>You: </b>"+ $('#myMessage').val();
-                document.getElementById('message_holder').appendChild(msgBody);
+              //Add a <p> for your message on the left
+              var msgBody = document.createElement("p");
+              msgBody.style="color: DARKBLUE; text-align:LEFT; overflow-wrap: break-word; word-wrap: break-word; padding-right:30%; padding-left: 3%;";
+              msgBody.innerHTML= "<b>You: </b>"+ $('#myMessage').val();
+              document.getElementById('message_holder').appendChild(msgBody);
 
-                var element = document.getElementById("message_holder");
-                element.scrollTop = element.scrollHeight;
+              var element = document.getElementById("message_holder");
+              element.scrollTop = element.scrollHeight;
 
-                //Emit a message to the server so that Python can pick up the 'python' message
-                socket.emit('python', {'the_text': $('#myMessage').val()}, namespace='/test');
+              //Emit a message to the server so that Python can pick up the 'python' message
+              socket.emit('python', {'the_text': $('#myMessage').val()}, namespace='/test');
 
-                document.getElementById('myMessage').value = ''
-              }
-              );
+              document.getElementById('myMessage').value = ''
+            }
+            );
 
-     var input = document.getElementById("myMessage");
-     input.addEventListener("keyup", function(event) {
-      if (event.keyCode === 13) {
-        event.preventDefault();
-        document.getElementById("sendbutton").click();
-      }
-    });
+   var input = document.getElementById("myMessage");
+   input.addEventListener("keyup", function(event) {
+    if (event.keyCode === 13) {
+      event.preventDefault();
+      document.getElementById("sendbutton").click();
+    }
+  });
 
-     $('#call_recommendations').on('click', function(){
-      console.log('Button Clicked');
-      console.log($('#myMessage').val());
+   $('#call_recommendations').on('click', function(){
+    console.log('Button Clicked');
+    console.log($('#myMessage').val());
 
-                //Emit a message to the server so that Python can pick up the 'python' message
-                socket.emit('recommendation_python', namespace='/test');
-              }
-              );
+              //Emit a message to the server so that Python can pick up the 'python' message
+              socket.emit('recommendation_python', namespace='/test');
+            }
+            );
 
 
 
-     socket.on('to_socket_string', function(msg) {
-  ////Add response image to your message on the right
-  var proPic = document.createElement("img");
-  proPic.src = "static/images/transparent.svg";
-  proPic.style = "float:right; height: 2vh;";
-  document.getElementById('message_holder').appendChild(proPic);
+   socket.on('to_socket_string', function(msg) {
+////Add response image to your message on the right
+var proPic = document.createElement("img");
+proPic.src = "static/images/transparent.svg";
+proPic.style = "float:right; height: 2vh;";
+document.getElementById('message_holder').appendChild(proPic);
 
-  //Add response text
-  var msgBody = document.createElement("p");
-  msgBody.style="color: DARKGREEN; text-align:RIGHT; overflow-wrap: break-word; word-wrap: break-word; padding-left:30%; padding-right: 3%;";
-  msgBody.innerHTML= "<b>GPT3: </b>"+ msg.string;
-  document.getElementById('message_holder').appendChild(msgBody);
+//Add response text
+var msgBody = document.createElement("p");
+msgBody.style="color: DARKGREEN; text-align:RIGHT; overflow-wrap: break-word; word-wrap: break-word; padding-left:30%; padding-right: 3%;";
+msgBody.innerHTML= "<b>GPT3: </b>"+ msg.string;
+document.getElementById('message_holder').appendChild(msgBody);
 
-  var element = document.getElementById("message_holder");
-  element.scrollTop = element.scrollHeight;
+var element = document.getElementById("message_holder");
+element.scrollTop = element.scrollHeight;
 });
-     socket.on('recommendation_socket', function(msg) {
-  ////Add response image to your message on the right
-  recommendations_array = msg.recommendations_array
+   socket.on('recommendation_socket', function(msg) {
+////Add response image to your message on the right
+recommendations_array = msg.recommendations_array
 
-  for (let l = 0; l < recommendations_array.length; l++) {
-  // Runs 5 times, with values of step 0 through 4.
-  var recommendation_body = document.createElement("p");
-  recommendation_body.style="color: DARKGREEN; text-align:RIGHT; overflow-wrap: break-word; word-wrap: break-word; padding-left:30%; padding-right: 3%;";
-  recommendation_body.innerHTML = recommendations_array[l]
+for (let l = 0; l < recommendations_array.length; l++) {
+// Runs 5 times, with values of step 0 through 4.
+var recommendation_body = document.createElement("p");
+recommendation_body.style="color: DARKGREEN; text-align:RIGHT; overflow-wrap: break-word; word-wrap: break-word; padding-left:30%; padding-right: 3%;";
+recommendation_body.innerHTML = recommendations_array[l]
 
-  document.getElementById('recommendation_holder').appendChild(recommendation_body)
+document.getElementById('recommendation_holder').appendChild(recommendation_body)
 
 }
 
@@ -123,9 +112,4 @@
 });
 </script>
 
-
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-</body>
-</html>
+{% endblock content %}
