Changing the prompt to a conversation from a summary/response combo

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -16,11 +16,11 @@
             <div id="message_holder" class = "message_holder">
               <section>
                 <div class="from-them">
-                    <p>Hi, I'm Sia! I'm an AI Counselor. So, while I'm not a human, I speak and act like how you would expect a Therapist to. </p>
+                    <p>Hi, I'm Sia! While I'm not a Therapist, I'm an AI that talks and responds like a Therapist. </p>
                   </div>
                   <div class="clear"></div>
                   <div class="from-them">
-                      <p>What's your name and what's on your mind? Don't worry, I won't record our conversation. </p>
+                      <p> What's on your mind? </p>
                     </div>
                     <div class="clear"></div>
                 </section>
