--- a/templates/chat.html
+++ b/templates/chat.html
@@ -16,7 +16,7 @@
             <div id="message_holder" class = "message_holder">
               <section>
                 <div class="from-them">
-                    <p>Hi, I'm Sia! While I'm not a Therapist, I'm an AI that talks and responds like a Therapist. </p>
+                    <p>Hi! While I'm not a Therapist, I'm an AI that talks and responds like one. </p>
                   </div>
                   <div class="clear"></div>
                   <div class="from-them">
