--- a/templates/chat.html
+++ b/templates/chat.html
@@ -24,8 +24,8 @@
                     </div>
                     <div class="clear"></div>
                 </section>
-              <div class="input-group" style = "position: absolute; bottom: 0px; padding: 3vh;">
-                <input id = "myMessage" type="text" class="form-control"/>
+              <div class="input-group" style = "position: absolute; bottom: 0px; padding: 3vh; padding-left: 12vh; text-align: center;">
+                <input id = "myMessage" type="text" class="form-control" style="font-size: .875em;"/>
                 <button id="sendbutton" class = "btn btn-primary">Send</button>
               </div>
 
